// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render NextPage with all props 1`] = `
<div
  className="nextpage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="Route!"
  >
    <p
      className="nextpage__text"
    >
      Text!
       →
    </p>
  </NavLink>
</div>
`;

exports[`Render NextPage with no props 1`] = `
<div
  className="nextpage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/"
  >
    <p
      className="nextpage__text"
    >
       →
    </p>
  </NavLink>
</div>
`;

exports[`Render NextPage with route 1`] = `
<div
  className="nextpage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="Route!"
  >
    <p
      className="nextpage__text"
    >
       →
    </p>
  </NavLink>
</div>
`;

exports[`Render NextPage with text 1`] = `
<div
  className="nextpage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/"
  >
    <p
      className="nextpage__text"
    >
      Text!
       →
    </p>
  </NavLink>
</div>
`;
